Add unit test for classes in AInstruction.cs.

--- a/AlterfulTests/AlterfulTests.csproj
+++ b/AlterfulTests/AlterfulTests.csproj
@@ -57,6 +57,8 @@
   </Choose>
   <ItemGroup>
     <Compile Include="AFileTests.cs" />
+    <Compile Include="AInstructionTests.cs" />
+    <Compile Include="AInstruction_StartupTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
