--- a/AlterfulTests/AlterfulTests.csproj
+++ b/AlterfulTests/AlterfulTests.csproj
@@ -56,6 +56,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="AConstQuoteTests.cs" />
     <Compile Include="AFileTests.cs" />
     <Compile Include="AInstructionTests.cs" />
     <Compile Include="AInstruction_MacroTests.cs" />
