Initialized ATheme.cs.

--- a/Alterful/Alterful.csproj
+++ b/Alterful/Alterful.csproj
@@ -74,6 +74,7 @@
     <Compile Include="AHotKeySetting.cs" />
     <Compile Include="AKey.cs" />
     <Compile Include="ASettings.cs" />
+    <Compile Include="ATheme.cs" />
     <Compile Include="HotKeyHelper.cs" />
     <Compile Include="HotKeyManager.cs" />
     <Compile Include="HotKeyModel.cs" />
