Show notification for mutex.

--- a/Alterful/Alterful.csproj
+++ b/Alterful/Alterful.csproj
@@ -42,6 +42,12 @@
   <PropertyGroup>
     <ApplicationIcon>AIcon.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <TargetZone>LocalIntranet</TargetZone>
+  </PropertyGroup>
+  <PropertyGroup>
+    <GenerateManifests>false</GenerateManifests>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
